chore: fix jdk 17 compatible